[gd_scene load_steps=15 format=2]

[ext_resource path="res://fonts/DigitalDisco.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://sprites/UI/TextBox.png" type="Texture" id=2]
[ext_resource path="res://scripts/Dialogue.gd" type="Script" id=3]
[ext_resource path="res://fonts/DigitalDisco-Thin.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scenes/Audio.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=4]
resource_name = "ChoiceEnd"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("ChoiceTitle:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ChoiceAnswer1:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ChoiceAnswer2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "ChoiceEnd" ],
"method": "anim_ended"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ChoiceAnswer1:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 0.435275, 1 ),
"update": 0,
"values": [ Vector2( 64, 576 ), Vector2( 64, 576 ), Vector2( -2000, 576 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ChoiceAnswer2:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2, 1.1 ),
"transitions": PoolRealArray( 1, 0.378929, 1 ),
"update": 0,
"values": [ Vector2( 64, 704 ), Vector2( 64, 704 ), Vector2( 64, 1200 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("ChoiceTitle:rect_position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 2.37841, 1 ),
"update": 0,
"values": [ Vector2( 64, 256 ), Vector2( 64, -162 ) ]
}

[sub_resource type="Animation" id=5]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("ChoiceTitle:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, 1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ChoiceTitle:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ChoiceAnswer1:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ChoiceAnswer2:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ChoiceAnswer1:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3, 1, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1.18921 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 0, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ChoiceAnswer2:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "ChoiceStart" ],
"method": "anim_ended"
} ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("ChoiceAnswer1:rect_position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 64, 576 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("ChoiceAnswer2:rect_position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 64, 704 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("ChoiceTitle:rect_position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 64, 256 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Text:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextBox:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Name:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Name:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.64, 1 ),
"update": 0,
"values": [ Vector2( 196, 658 ), Vector2( 428, 1186 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("TextBox:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.64, 0.63728 ),
"update": 0,
"values": [ Vector2( 960, 824 ), Vector2( 960, 1352 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Text:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.64, 0.64 ),
"update": 0,
"values": [ Vector2( 196, 732 ), Vector2( 196, 1261 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Text:percent_visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Name:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/8/type = "method"
tracks/8/path = NodePath(".")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "CloseTextBox" ],
"method": "anim_ended"
} ]
}

[sub_resource type="Animation" id=7]
length = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("TextBox:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 960, -0.25, 0, 0.25, 0, 960, -0.25, 0, 0.25, 0, 960, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("TextBox:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 824, -0.25, 0, 0.25, 0, 1352, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Text:rect_position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 196, -0.25, 0, 0.25, 0, 196, -0.25, 0, 0.25, 0, 196, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 2 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Text:rect_position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 732, -0.25, 0, 0.25, 0, 1261, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/4/type = "value"
tracks/4/path = NodePath("TextBox:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Text:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Name:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Name:rect_position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 196, 658 ), Vector2( 196, 1186 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Text:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextBox:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Name:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Name:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.63728, 1 ),
"update": 0,
"values": [ Vector2( 196, 1186 ), Vector2( 196, 658 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("TextBox:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.63728, 1 ),
"update": 0,
"values": [ Vector2( 960, 1352 ), Vector2( 960, 824 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Text:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.64, 1 ),
"update": 0,
"values": [ Vector2( 196, 1261 ), Vector2( 196, 732 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Name:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "method"
tracks/7/path = NodePath(".")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "OpenTextBox" ],
"method": "anim_ended"
} ]
}

[sub_resource type="Animation" id=9]
length = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("TextBox:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 960, -0.25, 0, 0.25, 0, 960, -0.25, 0, 0.25, 0, 960, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("TextBox:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1352, -0.25, 0, 0.25, 0, 824, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Text:rect_position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 196, -0.25, 0, 0.25, 0, 196, -0.25, 0, 0.25, 0, 196, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 2 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Text:rect_position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1261, -0.25, 0, 0.25, 0, 732, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/4/type = "value"
tracks/4/path = NodePath("Text:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("TextBox:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Name:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Name:rect_position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 196, 1186 ), Vector2( 196, 658 ) ]
}

[node name="TextBox" type="Control"]
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoiceTitle" type="RichTextLabel" parent="."]
visible = false
margin_left = 64.0
margin_top = -162.0
margin_right = 1856.0
margin_bottom = -25.9999
rect_scale = Vector2( 1e-05, 1 )
rect_pivot_offset = Vector2( 896, 65 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]sdsdsdssds"
text = "sdsdsdssds"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoiceAnswer1" type="RichTextLabel" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = -2000.0
margin_top = 576.0
margin_right = -208.0
margin_bottom = 704.0
rect_pivot_offset = Vector2( 896, 0 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]sdsdsdstsd"
text = "sdsdsdstsd"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoiceAnswer2" type="RichTextLabel" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = 64.0
margin_top = 1200.0
margin_right = 1856.0
margin_bottom = 1328.0
rect_pivot_offset = Vector2( 896, 0 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]sdsdsdsg"
text = "sdsdsdsg"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextBox" type="Sprite" parent="."]
visible = false
position = Vector2( 960, 1352 )
scale = Vector2( 25, 25 )
texture = ExtResource( 2 )

[node name="Name" type="RichTextLabel" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = 428.0
margin_top = 1186.0
margin_right = 1956.0
margin_bottom = 1218.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "xcxcxcx"
text = "xcxcxcx"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="."]
visible = false
margin_left = 196.0
margin_top = 1261.0
margin_right = 1724.0
margin_bottom = 1517.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
visible_characters = 0
percent_visible = 0.0
text = "xcxcxcxcxcxcx"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextBoxAnims" type="AnimationPlayer" parent="."]
anims/ChoiceEnd = SubResource( 4 )
anims/ChoiceStart = SubResource( 5 )
anims/CloseTextBox = SubResource( 6 )
anims/CloseTextBox_OLD = SubResource( 7 )
anims/OpenTextBox = SubResource( 8 )
anims/OpenTextBox_OLD = SubResource( 9 )

[node name="CharTimerText" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="T" type="Tween" parent="."]

[node name="T2" type="Tween" parent="."]

[node name="Audio" parent="." instance=ExtResource( 5 )]
[connection signal="timeout" from="CharTimerText" to="." method="char_timeout"]
[connection signal="timeout" from="CooldownTimer" to="." method="cooldown_ended"]
